added flyway migrations, upped springdoc v2, persist h2 db on filesystem. Use custom jpl query to force inner join on video-file